<resources>

    <!-- Strings globaux -->
    <string name="app_name">Ardoise</string>
    <string name="return_button_text">RETOUR</string>


    <!-- Strings accueil -->
    <string name="hello_text">Bienvenue sur votre application de gestion d\'ardoise.\n\n </string>
    <string name="connexion_text">Veuillez entrer votre nom</string>
    <string name="connexion_button">Connexion</string>


    <!-- Strings liste dépenses -->
    <string name="add_depenses_text">Ajouter une dépense</string>
    <string name="solde_total_text">Solde total : </string>

    <!-- Strings equilibre -->
    <string name="equilibre_button_text">EQUILIBRE</string>


    <!-- Strings ajout dépense -->
    <string name="title_add_depenses_text">Titre de la dépense</string>
    <string name="montant_text">Montant en €</string>
    <string name="payeur_text">Par qui ?</string>
    <string name="to_whom_text">Pour qui ?</string>
    <string name="validate_text">Valider</string>


    <!-- Strings evenement -->
    <string name="event_title_text">Titre de l\'évènement</string>
    <string name="premier_part_text">1er participant</string>
    <string name="second_part_text">2eme participant</string>
    <string name="troisieme_part_text">3eme participant</string>

    <!-- Strings item depense -->
    <string name="depense_title_text">Titre</string>
    <string name="montant_depense_text">Montant</string>
    <string name="text_depense_item">Payé par :</string>
    <string name="payeur_depense_text">Payeur</string>

    <!-- Strings item dette -->
    <string name="dette_title_text">Titre</string>
    <string name="montant_dette_text">Montant</string>
    <string name="text_dette_item">Dette de :</string>
    <string name="creancier_dette_text">Envers :</string>
</resources>
