<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detteTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/dette_title_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detteMontant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/montant_dette_text"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detteEndette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text_dette_item"
            android:textAlignment="viewStart"
            android:textColor="@color/colorRed" />

        <TextView
            android:id="@+id/detteCreancier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="viewEnd"
            android:text="@string/creancier_dette_text"
            android:textStyle="bold"
            android:textColor="@color/colorGreen"/>

    </LinearLayout>

</LinearLayout>