<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/hello_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_text"
            android:textAlignment="center"
            android:textSize="32dp"
            android:layout_marginVertical="30dp" />

        <EditText
            android:id="@+id/connexion_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/connexion_text"
            android:layout_marginVertical="10dp" />

        <Button
            android:id="@+id/connexion_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connexion_button"
            android:layout_marginVertical="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>