<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListeEvenementsActivity"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/event_title_text"
        android:inputType="textPersonName"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/participant1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="1er participant"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/participant2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_part_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/participant3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/troisieme_part_text"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/boutonValider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Valider"
        android:layout_marginVertical="10dp"/>

</LinearLayout>